--- a/clip_fao/fao_clip_pac.Rmd
+++ b/clip_fao/fao_clip_pac.Rmd
@@ -575,8 +575,8 @@ for(i in 1:length(spp_ex)) {
 
 ``` {r area_to_data_ratio, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
 
-# am_spp_cells <- read_csv(file.path(dir_anx, 'spp_ico',
-#                                    'v2016/int/am_cells_spp_prob0.csv')) 
+# am_spp_cells <- read_csv(file.path(dir_anx, '_raw_data/aquamaps',
+#                                    'd2015/csv/hcaf_sp_native_trunc.csv'))
 # 
 # am_spp_list <- read_csv(file.path(dir_anx, '_raw_data/aquamaps/d2015/csv/speciesoccursum.csv')) %>%
 #   dplyr::select(am_sid = speciesid, genus, species, reviewed, occurcells) %>%
@@ -590,23 +590,23 @@ for(i in 1:length(spp_ex)) {
 # am_spp_cells2 <- hcaf %>%
 #   left_join(am_spp_cells, by = 'loiczid')
 # 
-# 
 # spp_area_df <- am_spp_cells2 %>%
+#   rename(am_sid = speciesid) %>%
 #   group_by(am_sid) %>%
-#   summarize(cellarea = sum(cellarea),
-#             oceanarea = sum(oceanarea))
+#   summarize(env_area  = sum(oceanarea * probability),
+#             geom_area = sum(oceanarea))
 # 
 # spp_area_df <- spp_area_df %>%
 #   inner_join(am_spp_list, by = 'am_sid') %>%
-#   mutate(area_per_cells = oceanarea/occurcells)
+#   mutate(geom_area_per_cells = geom_area/occurcells,
+#          env_area_per_cells  = env_area/occurcells)
 # 
 # clipped_spp <- read_csv(file.path(dir_git, 'clip_fao', 'clipped_mid_pac.csv')) %>%
 #   filter(lim == 'e_lim') %>%
 #   dplyr::select(am_sid)
 # 
 # spp_area_df <- spp_area_df %>%
-#   mutate(log_area_cells = log(area_per_cells + 1),
-#          clipped = am_sid %in% clipped_spp$am_sid)
+#   mutate(clipped = am_sid %in% clipped_spp$am_sid)
 
 # write_csv(spp_area_df, 'clip_fao/spp_area_per_cell.csv')
 
@@ -615,15 +615,23 @@ spp_area_df <- read_csv('clip_fao/spp_area_per_cell.csv')
 spp_area_clipped <- spp_area_df %>%
   filter(clipped)
 
-### compare ocean areas
-summary(spp_area_df$oceanarea)
+### compare geometric space areas
+summary(spp_area_df$geom_area)
    #   Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
    #   1806    946600   2921000  10210000   7875000 501300000 
-summary(spp_area_clipped$oceanarea)
+summary(spp_area_clipped$geom_area)
    #   Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
    # 134900   4646000   7032000   8960000   9690000 111300000 
 
-### compare occurcells
+### compare environmental space areas
+summary(spp_area_df$env_area)
+   # Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
+   #   90    592200   1843000   6772000   5506000 402200000 
+summary(spp_area_clipped$env_area)
+   #  Min.  1st Qu.    Median      Mean   3rd Qu.      Max. 
+   # 75930  2994000   4909000   5989000   7156000  89480000
+   
+### compare occurcells by quadrant
 summary(spp_area_df$occurcells)
    # Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
    # 0.00    6.00   16.00   57.13   49.00 7663.00 
@@ -631,14 +639,34 @@ summary(spp_area_clipped$occurcells)
    # Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
    # 3.00    6.00   15.00   26.86   33.00  494.00 
 
-
-### compare area_per_cells
-summary(spp_area_df %>% filter(occurcells != 0) %>% .$area_per_cells)
+### compare geometric area_per_cells
+summary(spp_area_df %>% filter(occurcells != 0) %>% .$geom_area_per_cells)
     # Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
     #  190    50540   158000   485300   439100 44700000 
-summary(spp_area_clipped$area_per_cells)
+summary(spp_area_clipped$geom_area_per_cells)
     # Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
     # 6578   202900   452400   827200   923300 26090000 
+### compare environmental area_per_cells
+summary(spp_area_df %>% filter(occurcells != 0) %>% .$env_area_per_cells)
+    # Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
+    #   30    32270   101600   303700   287400 30100000 
+summary(spp_area_clipped$env_area_per_cells)
+    # Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
+    # 3352   140000   311100   511300   619800 12480000 
+
+### sample species
+### Rajella fyllae: Fis-131802
+spp_area_df %>% filter(am_sid == 'Fis-131802') %>% select(geom_area, env_area, occurcells, geom_area_per_cells, env_area_per_cells)
+    #   geom_area env_area occurcells geom_area_per_cells env_area_per_cells
+    #       <dbl>    <dbl>      <int>               <dbl>              <dbl>
+    # 1   5425916  3386906        116            46775.14           29197.47
+### Ophiotrix plana: W-Oph-245456
+spp_area_df %>% filter(am_sid == 'W-Oph-245456') %>% select(geom_area, env_area, occurcells, geom_area_per_cells, env_area_per_cells)
+    #   geom_area env_area occurcells geom_area_per_cells env_area_per_cells
+    #       <dbl>    <dbl>      <int>               <dbl>              <dbl>
+    # 1   5426931  3053926          4             1356733           763481.5
+
+
 
 ### compare reviewed species
 nrow(spp_area_df %>% filter(!str_detect(reviewed, 'null')))
